--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF6666</color>
+    <color name="blue">#66B8FF</color>
+    <color name="green">#69FF66</color>
 </resources>
