--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,32 @@
     </style>
 
     <style name="Theme.CatalogerOfPlanets" parent="Base.Theme.CatalogerOfPlanets" />
+
+    <style name="text18Theme">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/stalinist_one</item>
+    </style>
+
+    <style name="text14Theme">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/stalinist_one</item>
+    </style>
+
+    <style name="text11Theme">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">11dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/stalinist_one</item>
+    </style>
+
+    <style name="text10Theme">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">10dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/stalinist_one</item>
+    </style>
 </resources>
