--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="red">#FF6666</color>
     <color name="blue">#66B8FF</color>
     <color name="green">#69FF66</color>
+    <color name="gray">#707070</color>
+    <color name="trans">@android:color/transparent</color>
 </resources>
