--- a/app/src/main/res/layout/lose.xml
+++ b/app/src/main/res/layout/lose.xml
@@ -27,7 +27,7 @@
             android:theme="@style/text18Theme" />
 
         <ImageView
-            android:id="@+id/planet"
+            android:id="@+id/planet_lose"
             android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:src="@drawable/cha_0_0" />
 
         <TextView
-            android:id="@+id/coin"
+            android:id="@+id/coin_lose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -44,7 +44,7 @@
             android:theme="@style/text18Theme" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/go_to_planets"
+            android:id="@+id/go_to_planets_lose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/dark_rect"
@@ -52,7 +52,7 @@
             android:theme="@style/text14Theme" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/menu"
+            android:id="@+id/menu_lose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
