Ground game logic

--- a/app/src/main/res/layout/activity_ground.xml
+++ b/app/src/main/res/layout/activity_ground.xml
@@ -103,6 +103,26 @@
                     android:theme="@style/text18Theme" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/planet"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/cha_0_0" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:text="@string/your_combination"
+                    android:theme="@style/text14Theme" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
