--- a/app/src/main/res/layout/activity_atmosphere.xml
+++ b/app/src/main/res/layout/activity_atmosphere.xml
@@ -90,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="AZR1122"
+                    android:text="@string/atmosphere"
                     android:theme="@style/text18Theme" />
 
                 <TextView
