--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -133,6 +133,7 @@
                         android:theme="@style/text11Theme" />
 
                     <LinearLayout
+                        android:id="@+id/layout_one"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="5dp"
@@ -145,10 +146,11 @@
                             android:src="@drawable/atmos" />
 
                         <TextView
+                            android:id="@+id/text_one"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:text="@string/completed"
+                            android:text="@string/atmosphere"
                             android:theme="@style/text11Theme" />
                     </LinearLayout>
                 </LinearLayout>
@@ -171,21 +173,16 @@
                         android:text="Award: 233"
                         android:theme="@style/text11Theme" />
 
-                    <LinearLayout
+                    <TextView
                         android:id="@+id/one_play_again"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/gray_rect"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="@string/play_again"
-                            android:theme="@style/text11Theme" />
-                    </LinearLayout>
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
+                        android:text="@string/play_again"
+                        android:theme="@style/text11Theme" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -211,6 +208,7 @@
                         android:theme="@style/text11Theme" />
 
                     <LinearLayout
+                        android:id="@+id/layout_two"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="5dp"
@@ -223,10 +221,11 @@
                             android:src="@drawable/ground" />
 
                         <TextView
+                            android:id="@+id/text_two"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:text="@string/completed"
+                            android:text="@string/ground"
                             android:theme="@style/text11Theme" />
                     </LinearLayout>
                 </LinearLayout>
@@ -249,21 +248,16 @@
                         android:text="Award: 233"
                         android:theme="@style/text11Theme" />
 
-                    <LinearLayout
+                    <TextView
                         android:id="@+id/two_play_again"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/green_rect"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="@string/play_again"
-                            android:theme="@style/text11Theme" />
-                    </LinearLayout>
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
+                        android:text="@string/play_again"
+                        android:theme="@style/text11Theme" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -289,6 +283,7 @@
                         android:theme="@style/text11Theme" />
 
                     <LinearLayout
+                        android:id="@+id/layout_three"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="5dp"
@@ -301,10 +296,11 @@
                             android:src="@drawable/core" />
 
                         <TextView
+                            android:id="@+id/text_three"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:text="@string/completed"
+                            android:text="@string/core"
                             android:textColor="@color/gray"
                             android:theme="@style/text11Theme" />
                     </LinearLayout>
@@ -328,25 +324,49 @@
                         android:text="Award: 233"
                         android:theme="@style/text11Theme" />
 
-                    <LinearLayout
+                    <TextView
                         android:id="@+id/three_play_again"
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_marginTop="5dp"
                         android:background="@drawable/dark_rect"
-                        android:gravity="center">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:text="@string/play_again"
-                            android:textColor="@color/gray"
-                            android:theme="@style/text11Theme" />
-                    </LinearLayout>
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
+                        android:text="@string/play_again"
+                        android:textColor="@color/gray"
+                        android:theme="@style/text11Theme" />
                 </LinearLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/layout_game_done"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:visibility="gone">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/shop"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/gray_rect"
+                    android:text="@string/shop"
+                    android:theme="@style/text14Theme" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/next"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/green_rect"
+                    android:text="@string/next"
+                    android:theme="@style/text14Theme" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
