--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -347,24 +347,11 @@
                 android:visibility="gone">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/shop"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/gray_rect"
-                    android:text="@string/shop"
-                    android:theme="@style/text14Theme" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/next"
+                    android:id="@+id/done"
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:background="@drawable/green_rect"
-                    android:text="@string/next"
+                    android:text="@string/done"
                     android:theme="@style/text14Theme" />
             </LinearLayout>
         </LinearLayout>
