--- a/app/src/main/res/layout/activity_space.xml
+++ b/app/src/main/res/layout/activity_space.xml
@@ -128,16 +128,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp">
 
             <!-- Planet 1 (Top Center) -->
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_marginLeft="25dp"
                 android:layout_width="150dp"
-                android:layout_height="0dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1">
+                android:layout_height="150dp"
+                android:layout_gravity="center_horizontal">
 
                 <ImageView
                     android:id="@+id/planet1"
@@ -161,9 +161,9 @@
             <!-- Planet 2 (Left) -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="150dp"
-                android:layout_height="0dp"
+                android:layout_height="150dp"
                 android:layout_gravity="start"
-                android:layout_weight="1">
+                android:layout_marginTop="-25dp">
 
                 <ImageView
                     android:id="@+id/planet2"
@@ -186,11 +186,10 @@
 
             <!-- Planet 3 (Right) -->
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_marginTop="-100dp"
                 android:layout_width="150dp"
-                android:layout_height="0dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="-50dp"
-                android:layout_weight="1">
+                android:layout_height="150dp"
+                android:layout_gravity="end">
 
                 <ImageView
                     android:id="@+id/planet3"
@@ -214,9 +213,10 @@
             <!-- Planet 4 (Bottom Center) -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="150dp"
-                android:layout_height="0dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1">
+                android:layout_height="150dp"
+                android:layout_marginTop="-50dp"
+                android:layout_marginRight="25dp"
+                android:layout_gravity="center_horizontal">
 
                 <ImageView
                     android:id="@+id/planet4"
