--- a/app/src/main/res/layout/one_store.xml
+++ b/app/src/main/res/layout/one_store.xml
@@ -1,12 +1,13 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="280dp"
-    android:layout_height="370dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center|top">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="280dp"
+        android:layout_height="370dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_rect2">
 
@@ -77,4 +78,4 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
