--- a/app/src/main/res/layout/popup_info.xml
+++ b/app/src/main/res/layout/popup_info.xml
@@ -1,15 +1,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="280dp"
-    android:layout_height="220dp"
+    android:layout_width="200dp"
+    android:layout_height="180dp"
     android:background="@drawable/bg_rect2"
     android:orientation="vertical">
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:alpha="0.1"
+        android:alpha="0.3"
         android:background="@color/blue"
         android:gravity="center"
         android:orientation="vertical"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/planet"
-            android:theme="@style/text14Theme" />
+            android:theme="@style/text11Theme" />
 
         <TextView
             android:id="@+id/mode"
@@ -39,7 +40,7 @@
             android:gravity="center"
             android:text="@string/easy"
             android:textColor="@color/green"
-            android:theme="@style/text14Theme" />
+            android:theme="@style/text11Theme" />
 
         <TextView
             android:id="@+id/award"
@@ -47,26 +48,26 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Award: 150"
-            android:theme="@style/text14Theme" />
+            android:theme="@style/text11Theme" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="40dp"
             android:layout_margin="10dp"
             android:background="@drawable/blue_rect"
             android:text="@string/explore"
-            android:theme="@style/text18Theme" />
+            android:theme="@style/text11Theme" />
 
         <TextView
             android:id="@+id/alert"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/buy_equipment_in_the_shop"
-            android:theme="@style/text11Theme"
+            android:theme="@style/text10Theme"
             android:textColor="@color/red"/>
     </LinearLayout>
 
