--- a/app/src/main/res/layout/activity_core.xml
+++ b/app/src/main/res/layout/activity_core.xml
@@ -116,6 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_disc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
