--- a/app/src/main/res/layout/activity_ground.xml
+++ b/app/src/main/res/layout/activity_ground.xml
@@ -104,6 +104,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_progress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -128,7 +129,8 @@
         <LinearLayout
             android:id="@+id/layout_canvas"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
 
